--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <script src="https://fb.me/react-0.14.3.js"></script>
     <script src="https://fb.me/react-dom-0.14.3.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
 </head>
@@ -14,6 +16,6 @@
 
 <div id="content"></div>
 
-<script type="text/jsx;harmony=true" src="script.js"></script>
+<script type="text/babel" src="script.js"></script>
 </body>
 </html>
