--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <title>RE02</title>
     <link rel="stylesheet" href="css/main.css"/>
 
-    <script src="https://fb.me/react-15.3.0.js"></script>
-    <script src="https://fb.me/react-dom-15.3.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
