--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <script src="node_modules/axios/dist/axios.js"></script>
     <script src="node_modules/marked/marked.min.js"></script>
     <script src="node_modules/moment/moment.js"></script>
-    <script src="node_modules/react/dist/react.js"></script>
-    <script src="node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="node_modules/react/umd/react.development.js"></script>
+    <script src="node_modules/react-dom/umd/react-dom.development.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
